2006-04-25 [colin]	2.1.1cvs36

	* src/folder.c
		Complete 2.1.1cvs33 (once more ;)

2006-04-25 [colin]	2.1.1cvs35

	* src/editldap.c
		Fix tooltip

2006-04-25 [cleroy]	2.1.1cvs34

	* src/compose.c
	* src/gtk/gtkaspell.c
		Fix crash on redirect (related to the return 
		of the aspell menu in compose's toolbar)
	* src/image_viewer.c
	* src/prefs_msg_colors.c
	* src/gtk/pluginwindow.c
	* src/gtk/prefswindow.c
		Change released signals to clicked (Fabien)
	* po/POTFILES.in
	* src/common/socket.c
	* src/plugins/spamassassin/spamassassin.c
		Translate strings (Fabien)

2006-04-25 [paul]	2.1.1cvs33

	* src/folder.c
	* src/folder.h
	* src/folderview.c
		complete the fix of bug #912
		Thanks to Colin

2006-04-25 [colin]	2.1.1cvs32

	* src/news.c
		Better progress bar
	* src/mimeview.c
	* src/summaryview.c
	* src/summaryview.h
		Fix focus chain
		Patches by Pawel Pekala

2006-04-24 [colin]	2.1.1cvs31

	* src/compose.c
		Fix compilation warnings (Fabien)

2006-04-24 [colin]	2.1.1cvs30

	* src/addrindex.c
	* src/editldap.c
	* src/editldap_basedn.c
	* src/editldap_basedn.h
	* src/ldapctrl.c
	* src/ldapctrl.h
	* src/ldapquery.c
	* src/ldaputil.c
	* src/ldaputil.h
		Fix bug #901 (LDAPS support)

2006-04-24 [colin]	2.1.1cvs29

	* src/compose.c
		Fix logic on error with send dialog on
	* src/imap.c
		Fix compilation without libetpan, thanks
		to Fabien
	* src/summaryview.c
		Fix 'context-menu' key

2006-04-23 [colin]	2.1.1cvs28

	* src/folder.c
		Never free current's cache to free up 
		memory. Fixes bug #912 (new count 
		randomly set to message count)

2006-04-23 [colin]	2.1.1cvs27

	* src/gtk/quicksearch.c
		And remove printf...

2006-04-23 [colin]	2.1.1cvs26

	* src/gtk/quicksearch.c
		Fix replacing in quicksearch, and fix inserting
		in the middle of the string. (introduced at 2.1.0cvs22)

2006-04-23 [colin]	2.1.1cvs25

	* src/imap.c
		Make sure uidnext is initialized in get_num_list
		(not for stable, related to 2.1.1cvs8 and friends)

2006-04-23 [colin]	2.1.1cvs24
