@@ -1458,3 +1458,4 @@
 ( cvs diff -u -r 1.53.2.16 -r 1.53.2.17 po/POTFILES.in;  cvs diff -u -r 1.382.2.268 -r 1.382.2.269 src/compose.c;  cvs diff -u -r 1.1.2.7 -r 1.1.2.8 src/image_viewer.c;  cvs diff -u -r 1.1.2.23 -r 1.1.2.24 src/prefs_msg_colors.c;  cvs diff -u -r 1.13.2.20 -r 1.13.2.21 src/common/socket.c;  cvs diff -u -r 1.9.2.39 -r 1.9.2.40 src/gtk/gtkaspell.c;  cvs diff -u -r 1.5.2.29 -r 1.5.2.30 src/gtk/pluginwindow.c;  cvs diff -u -r 1.12.2.25 -r 1.12.2.26 src/gtk/prefswindow.c;  cvs diff -u -r 1.18.2.33 -r 1.18.2.34 src/plugins/spamassassin/spamassassin.c;  ) > 2.1.1cvs34.patchset
 ( cvs diff -u -r 1.8.2.12 -r 1.8.2.13 src/editldap.c;  ) > 2.1.1cvs35.patchset
 ( cvs diff -u -r 1.213.2.90 -r 1.213.2.91 src/folder.c;  ) > 2.1.1cvs36.patchset
+( cvs diff -u -r 1.105.2.54 -r 1.105.2.55 src/prefs_account.c;  cvs diff -u -r 1.1.2.24 -r 1.1.2.25 src/prefs_msg_colors.c;  cvs diff -u -r 1.5.2.25 -r 1.5.2.26 src/gtk/gtkutils.c;  ) > 2.1.1cvs37.patchset
