@@ -1,3 +1,12 @@
+2006-04-27 [paul]	2.1.1cvs37
+
+	* src/prefs_account.c
+		improve privacy labels
+	* src/prefs_msg_colors.c
+		change some strings for translators' convenience
+	* src/gtk/gtkutils.c
+		don't underline the link button text
+
 2006-04-25 [colin]	2.1.1cvs36
 
 	* src/folder.c
